Fixed Bug #44191 (preg_grep messes up array index)